# BabyLlama

./: README.md  pyproject.toml
baby_llama/: config.py  models.py  run.py  run_tokenizer.py  train.py  utils.py
baby_llama/archive/: models.py  run.py  test.py  test_rope.py  utils.py
baby_llama/config/: parent.yaml
baby_llama/config/dataset/: tinyshakespeare.yaml
baby_llama/config/model/: llama.yaml
baby_llama/config/trainer/: standard.yaml
baby_llama/data/: dataloader.py  utils.py
