[tool.poetry]
name = "baby-llama"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "baby_llama"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
pytorch-lightning = "^2.0.7"
datasets = "^2.14.4"
transformers = "^4.31.0"
wandb = "^0.15.8"
hydra-core = "^1.3.2"
labml = "^0.4.168"
labml-nn = "^0.4.135"
loguru = "^0.7.2"
sentencepiece = "^0.1.99"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
